objects/JBCXM__ScorecardMetric__c.object
<CustomObject>
    <description>This is used to store the different types groups and set of measures under each group.</description>
    <fields>
        <fullName>JBCXM__AllowOverride__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This is used to specify whether the Grade/Score/Color is editable or not if already assigned.</description>
        <label>Allow Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__GroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Id</label>
        <referenceTo>JBCXM__ScorecardMetric__c</referenceTo>
        <relationshipLabel>Scorecard Metrics</relationshipLabel>
        <relationshipName>Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__HelpText__c</fullName>
        <description>This is used to store the help text by scoring scheme range.
For example:{&quot;A&quot;:&apos;Help text for A&quot;, &quot;B&quot;:&apos;Help text for B&quot;, &quot;C&quot;:&apos;Help text for C&quot;}</description>
        <label>Help Text</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__InputType__c</fullName>
        <description>This is used to specify source to generate a Grade/Score/Color of the measure.</description>
        <label>Input Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calculated</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will specify the entry is group or measure under the group.</description>
        <label>Is Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__MetricType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MetricType</label>
        <referenceTo>JBCXM__GSMetaInfo__c</referenceTo>
        <relationshipLabel>Scorecard Metrics</relationshipLabel>
        <relationshipName>Scorecard_Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__PeriodType__c</fullName>
        <description>This used to specify the whether validity period in DAY or WEEK or MONTH or YEAR.</description>
        <label>Period Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__ScoringSchemeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scorecard Scoring Scheme</label>
        <referenceTo>JBCXM__ScoringScheme__c</referenceTo>
        <relationshipLabel>Scorecard Metrics</relationshipLabel>
        <relationshipName>ScorecardMetrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__ValidityPeriod__c</fullName>
        <description>This used to specify the validity time of the Metric.</description>
        <label>Validity Period</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Weight__c</fullName>
        <description>This is used to specify the weight-age in the overall customer level score calculation.</description>
        <label>Weight</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Scorecard Metric</label>
    <nameField>
        <label>Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scorecard Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>